--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,44 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/button1"
+            android:background="@color/red"
+            android:layout_height="75dp"
+            android:layout_width="100dp"
+            android:text="B1"
+            android:textSize="24pt"/>
 
+        <Button
+            android:id="@+id/button2"
+            android:background="@color/green"
+            android:layout_height="75dp"
+            android:layout_width="100dp"
+            android:layout_gravity="right"
+            android:text="B2"
+            android:textSize="24pt"/>
+
+        <Button
+            android:id="@+id/button3"
+            android:background="@color/orange"
+            android:layout_height="75dp"
+            android:layout_width="100dp"
+            android:layout_gravity="bottom"
+            android:text="B3"
+            android:textSize="24pt"/>
+
+        <Button
+            android:id="@+id/button4"
+            android:background="@color/blue"
+            android:layout_height="75dp"
+            android:layout_width="100dp"
+            android:layout_gravity="bottom|right"
+            android:text="B4"
+            android:textSize="24pt"/>
+
+    </FrameLayout>
 </RelativeLayout>
